<resources>
    <string name="app_name">Project2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="group_name">Group name</string>
    <string name="button_refresh">Refresh List</string>
    <string name="button_connect">Connect</string>
    <string name="button_unregister">Unregister</string>
    <string name="button_randomCord">Random cordinates</string>

</resources>
